[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/background/bg_day.png" type="Texture" id=1]
[ext_resource path="res://assets/background/bg_day_detail.png" type="Texture" id=2]
[ext_resource path="res://assets/background/moon.png" type="Texture" id=3]
[ext_resource path="res://assets/background/bg_night.png" type="Texture" id=4]
[ext_resource path="res://scripts/TimerPrint.gd" type="Script" id=5]
[ext_resource path="res://assets/background/sun.png" type="Texture" id=6]

[node name="daytime" type="Label"]
margin_left = 892.0
margin_top = -866.0
margin_right = 972.0
margin_bottom = -835.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "texto"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg_day_detail" type="Sprite" parent="."]
position = Vector2( -1177.01, 304.504 )
scale = Vector2( 1.89301, 1.77266 )
z_index = -2
texture = ExtResource( 2 )
offset = Vector2( -76.8409, 124.161 )

[node name="bg_day" type="Sprite" parent="."]
position = Vector2( -892, 541.884 )
scale = Vector2( 8.06355, 4.93138 )
z_index = -3
texture = ExtResource( 1 )

[node name="bg_day_detail2" type="Sprite" parent="."]
position = Vector2( -112.48, 523.81 )
scale = Vector2( 1.89301, 1.77266 )
z_index = -2
texture = ExtResource( 2 )

[node name="moon" type="Sprite" parent="."]
position = Vector2( -1775.1, 83.4397 )
texture = ExtResource( 3 )

[node name="sun" type="Sprite" parent="."]
position = Vector2( -1772.72, 81.0661 )
texture = ExtResource( 6 )

[node name="bg_night2" type="Sprite" parent="."]
position = Vector2( -25.6351, 551.426 )
scale = Vector2( 5.0341, 5.0341 )
z_index = -3
texture = ExtResource( 4 )

[node name="bg_night" type="Sprite" parent="."]
position = Vector2( -1750.22, 172.674 )
scale = Vector2( 5.0341, 5.0341 )
z_index = -3
texture = ExtResource( 4 )
offset = Vector2( 92.5919, 75.1873 )
